Update solar site

--- a/discover/for_whom/index.html
+++ b/discover/for_whom/index.html
@@ -180,8 +180,7 @@ window.cookieconsent.initialise({
 <ul class="sectlevel1">
 <li><a href="#submenuconfig">submenuconfig</a></li>
 <li><a href="#for_whom_is_solar">For whom is SolAR?</a></li>
-<li><a href="#solar_adapts">SolAR adapts</a></li>
-<li><a href="#solar_main_applications">SolAR main applications</a></li>
+<li><a href="#solar_applications">SolAR applications</a></li>
 </ul>
 </div>
 <div class="sect1">
@@ -220,7 +219,10 @@ window.cookieconsent.initialise({
 <div class="ulist">
 <ul>
 <li>
-<p>For <strong>pose estimation developers</strong>, allowing them to create a pose estimation scheme with the best computer vision components available.</p>
+<p>For <strong>component developers</strong>, allowing them to create specific and optimized basic vision processing elements and share it with the community, either for free or not.</p>
+</li>
+<li>
+<p>For <strong>pose estimation developers</strong>, allowing them to create a pose estimation pipeline with the best computer vision components available.</p>
 </li>
 <li>
 <p>For <strong>AR service developpers</strong>, allowing them to benefit from the best pose estimation pipelines in their AR applications.</p>
@@ -230,51 +232,55 @@ window.cookieconsent.initialise({
 </div>
 </div>
 <div class="sect1">
-<h2 id="solar_adapts"><a class="anchor" href="#solar_adapts"></a><a class="link" href="#solar_adapts">SolAR adapts</a></h2>
+<h2 id="solar_applications"><a class="anchor" href="#solar_applications"></a><a class="link" href="#solar_applications">SolAR applications</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>As your requirements are <strong>specific</strong>:</p>
+<p>SolAR does not aim at focalizing on dedicated use cases, but rather offer a generic framework adressing any kind of applications where AR makes sense:</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Specific environments</p>
-</li>
+<p>Home</p>
+<div class="ulist">
+<ul>
 <li>
-<p>Specific devices</p>
-</li>
-<li>
-<p>Specific accuracy</p>
-</li>
-<li>
-<p>Specific tracking area scale</p>
+<p>Gaming, enhanced video contents, IoT interaction interface, etc.</p>
 </li>
 </ul>
 </div>
-<div class="paragraph">
-<p>you will find all you need to build a <strong>custom and efficient solution</strong> to estimate your own vision sensor pose for augmented reality.</p>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="solar_main_applications"><a class="anchor" href="#solar_main_applications"></a><a class="link" href="#solar_main_applications">SolAR main applications</a></h2>
-<div class="sectionbody">
-<div class="paragraph">
-<p>SolAR focuses on 4 <strong>big use cases</strong> and adapts to their constraints.</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>Home services</p>
 </li>
 <li>
 <p>Health services</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Surgery aid, rehabilitation, training, education, etc.</p>
+</li>
+</ul>
+</div>
 </li>
 <li>
 <p>Industry</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Assembly, quality control, maintenance, factory planning, logistics, training, monitoring, sales and marketing, etc.</p>
+</li>
+</ul>
+</div>
 </li>
 <li>
 <p>Real estate</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Consultation, design, companion on construction site, supervision, training, sales and marketing, etc.</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>And much more.</p>
 </li>
 </ul>
 </div>
