--- a/discover/how/index.html
+++ b/discover/how/index.html
@@ -253,7 +253,7 @@ Your browser does not support the video tag.
 <h2 id="solar_is_open_source"><a class="anchor" href="#solar_is_open_source"></a><a class="link" href="#solar_is_open_source">SolAR is open-source</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This framework is open-source and released under <a href="https://www.apache.org/licenses/LICENSE-2.0"><strong>Apache v2 license</strong></a>,
+<p>This framework is open-source and released under <a href="https://www.apache.org/licenses/LICENSE-2.0"><strong>Apache license 2.0</strong></a>,
 that lets you use it <strong>for research</strong> as well as <strong>commercial purposes</strong>.</p>
 </div>
 <div class="paragraph">
