--- a/discover/what/index.html
+++ b/discover/what/index.html
@@ -223,7 +223,7 @@ window.cookieconsent.initialise({
 <p>It offers a C++ SDK to <strong>easily and quickly develop</strong> and use <strong>custom solutions for camera pose estimation</strong>. It provides developers with a <strong>full chain</strong> from low-level vision components development to <strong>camera pose estimation pipelines</strong> and AR service development.</p>
 </div>
 <div class="paragraph">
-<p>The SolAR framework is open-source and released under <a href="https://www.apache.org/licenses/LICENSE-2.0"><strong>Apache v2 license</strong></a>,
+<p>The SolAR framework is open-source and released under <a href="https://www.apache.org/licenses/LICENSE-2.0"><strong>Apache license 2.0</strong></a>,
 that lets you use it for <strong>research</strong> as well as for <strong>commercial purposes</strong>
 addressing various domains (smart factory, smart home, real estate,
 e-health, etc.).</p>
@@ -246,13 +246,13 @@ e-health, etc.).</p>
 <p>On one hand, major IT actors have released toolkits to develop AR applications. Nevertheless, they do not always meet the specific needs required by dedicated use cases or contextual environments (localization accuracy, lighting conditions, indoor/outdoor environments, tracking area range, dynamic scenes, etc.).</p>
 </div>
 <div class="paragraph">
-<p>No solution fits all, and generally, these proprietary toolkits do not provide the level of tuning required to optimally adapt the vision based localization solution to the use case. Moreover, these closed solutions do not always ensure the confidentiality of data, and can store information concerning your environment (3D maps, key frames) or the augmentations (3D meshes, procedure scenarios) that could contain crucial intellectual properties.</p>
+<p>No solution fits all, and generally, these proprietary toolkits do not provide the level of tuning required to optimally adapt the vision based localization solution to the use case. Moreover, these closed solutions do not always ensure the confidentiality of data, and can store information concerning your environment (3D maps, key frames) or the augmentations (3D meshes, procedure scenarios) that could contain crucial intellectual property.</p>
 </div>
 <div class="paragraph">
 <p>On the other hand, open source vision libraries and SLAM implementations can generally be modified and configured to optimally meet AR applications requirements. However, many SLAM implementations generally developed by academic actors do not provide the license or the level of maturity required for the development of commercial solutions. Likewise, open source vision libraries offer a huge number of low-level functions but require a huge expertise and important development resources to obtain a usable camera pose estimation pipeline ready for commercial use.</p>
 </div>
 <div class="paragraph">
-<p>Ti that end, the SolAR framework offers an alternative to current commercial AR SDKs or existing open-source solutions, providing the benefits of both worlds – <strong>openness, ease of use, efficiency, adaptiveness</strong>. It aims at creating an ecosystem bringing researchers, developers, and end-users together to accelerate the growth of augmented reality.</p>
+<p>To that end, the SolAR framework offers an alternative to current commercial AR SDKs or existing open-source solutions, providing the benefits of both worlds – <strong>openness, ease of use, efficiency, adaptiveness</strong>. It aims at creating an ecosystem bringing researchers, developers, and end-users together to accelerate the growth of augmented reality.</p>
 </div>
 <div class="paragraph">
 <p>We hope that this open-source framework will limit the creation of vertical silos and enable collaborators in the supply chain to each offer their part in an overall AR solution.</p>
