Update solar site

--- a/discover/programmer_guide/index.html
+++ b/discover/programmer_guide/index.html
@@ -240,7 +240,7 @@ window.cookieconsent.initialise({
 <p><strong>SolAR Data Structures</strong> define the information that flows in the pipelines and is exchanged between components.</p>
 </li>
 <li>
-<p><strong>SolAR Components Interfaces</strong> define a standardized interfaces for the different categories of basic processing elements required to implement camera pose estimation (i.e.: key point extractor, descriptor computation, etc.). This unified interface is required to ensure interoperability between components allowing to easily swap one with another to improve the final camera pose estimation pipeline. Please refer to the API documentation to know more about <a href="../API.adoc">SolAR components interfaces</a>.</p>
+<p><strong>SolAR Components Interfaces</strong> define a standardized interfaces for the different categories of basic processing elements required to implement camera pose estimation (i.e.: key point extractor, descriptor computation, etc.). This unified interface is required to ensure interoperability between components allowing to easily swap one with another to improve the final camera pose estimation pipeline.</p>
 </li>
 <li>
 <p>The <strong>SolAR Pipeline Manager</strong> handles the implementation of a pipeline by loading components, connecting them, and running the pipeline.</p>
@@ -258,7 +258,7 @@ window.cookieconsent.initialise({
 <div class="ulist">
 <ul>
 <li>
-<p>Coming soon: configure components on the fly, pipeline, multithread, metadata. Please refer to the <a href="../_discover/when.adoc">roadmap</a> for more information.</p>
+<p>Coming soon: configure components on the fly, pipeline, multithread, metadata.</p>
 </li>
 </ul>
 </div>
