Update solar site

--- a/discover/for_whom/index.html
+++ b/discover/for_whom/index.html
@@ -219,13 +219,13 @@ window.cookieconsent.initialise({
 <div class="ulist">
 <ul>
 <li>
-<p>For <strong>component developers</strong>, allowing them to create specific and optimized basic vision processing elements and share it with the community, either for free or not.</p>
+<p>For <strong>component developers</strong>, allowing them to create specific and optimized basic vision processing elements and share them with the community, either for free or not.</p>
 </li>
 <li>
 <p>For <strong>pose estimation developers</strong>, allowing them to create a pose estimation pipeline with the best computer vision components available.</p>
 </li>
 <li>
-<p>For <strong>AR service developpers</strong>, allowing them to benefit from the best pose estimation pipelines in their AR applications.</p>
+<p>For <strong>AR service developpers</strong>, allowing them to benefit from the best pose estimation pipelines for their AR applications.</p>
 </li>
 </ul>
 </div>
@@ -235,7 +235,7 @@ window.cookieconsent.initialise({
 <h2 id="solar_applications"><a class="anchor" href="#solar_applications"></a><a class="link" href="#solar_applications">SolAR applications</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>SolAR does not aim at focalizing on dedicated use cases, but rather offer a generic framework adressing any kind of applications where AR makes sense:</p>
+<p>SolAR does not aim at focalizing on dedicated use cases, but rather offers a generic framework addressing all kinds of applications where AR can bring an added value:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -274,7 +274,7 @@ window.cookieconsent.initialise({
 <div class="ulist">
 <ul>
 <li>
-<p>Consultation, design, companion on construction site, supervision, training, sales and marketing, etc.</p>
+<p>Consultation, design, companion on construction sites, supervision, training, sales and marketing, etc.</p>
 </li>
 </ul>
 </div>
