--- a/discover/what/index.html
+++ b/discover/what/index.html
@@ -229,7 +229,7 @@ addressing various domains (smart factory, smart home, real estate,
 e-health, etc.).</p>
 </div>
 <div class="paragraph">
-<p>The SolAR framework aims at stimulating the interaction between <strong>all actors of AR development</strong> and ease the technology transfer for the benefit of end-users.</p>
+<p>SolAR aims at stimulating the interaction between <strong>all actors of AR development</strong> and ease the technology transfer for the benefit of end-users.</p>
 </div>
 <div class="paragraph">
 <p>A SolAR compatible Unity plugin is coming soon.</p>
@@ -252,10 +252,10 @@ e-health, etc.).</p>
 <p>On the other hand, open source vision libraries and SLAM implementations can generally be modified and configured to optimally meet AR applications requirements. However, many SLAM implementations generally developed by academic actors do not provide the license or the level of maturity required for the development of commercial solutions. Likewise, open source vision libraries offer a huge number of low-level functions but require a huge expertise and important development resources to obtain a usable camera pose estimation pipeline ready for commercial use.</p>
 </div>
 <div class="paragraph">
-<p>To that end, the SolAR framework offers an alternative to current commercial AR SDKs or existing open-source solutions, providing the benefits of both worlds – <strong>openness, ease of use, efficiency, adaptiveness</strong>. It aims at creating an ecosystem bringing researchers, developers, and end-users together to accelerate the growth of augmented reality.</p>
+<p>To that end, SolAR offers an alternative to current commercial AR SDKs or existing open-source solutions, providing the benefits of both worlds – <strong>openness, ease of use, efficiency, adaptiveness</strong>. It aims at creating an ecosystem bringing researchers, developers, and end-users together to accelerate the growth of augmented reality.</p>
 </div>
 <div class="paragraph">
-<p>We hope that this open-source framework will limit the creation of vertical silos and enable collaborators in the supply chain to each offer their part in an overall AR solution.</p>
+<p>We hope that this open-source framework will limit the creation of vertical silos and enable collaborators in the supply chain to each contribute their part in an overall AR solution.</p>
 </div>
 </div>
 </div>
