--- a/discover/when/index.html
+++ b/discover/when/index.html
@@ -180,6 +180,7 @@ window.cookieconsent.initialise({
 <ul class="sectlevel1">
 <li><a href="#submenuconfig">submenuconfig</a></li>
 <li><a href="#solar_roadmap">SolAR roadmap</a></li>
+<li><a href="#contact_mail">Contact Mail</a></li>
 </ul>
 </div>
 <div class="sect1">
@@ -216,14 +217,14 @@ window.cookieconsent.initialise({
 <h2 id="solar_roadmap"><a class="anchor" href="#solar_roadmap"></a><a class="link" href="#solar_roadmap">SolAR roadmap</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>The SolAR source code is going to be released soon for Windows and Linux (early November).
-It will include the interface definition required to build simple camera pose estimation pipelines (samples will be given on natural images and fiducial markers) as well as a Unity plugin allowing AR service developers to create their first AR applications based on the SolAR framework.</p>
+<p>The SolAR source code is going to be released for Windows and Linux in early November.
+It will include the interface definition required to build simple camera pose estimation pipelines (samples will be given for natural image markers and fiducial markers) as well as a Unity plugin allowing AR service developers to create their first AR applications using SolAR.</p>
 </div>
 <div class="paragraph">
 <p>The following roadmap presents the features that will be implemented in a near future on SolAR core (pipeline, multi-threading, openVX compliance, Android and iOS support, etc.) as well as the new expected components allowing the creation of extended camera pose estimation pipelines (SLAM, visual/inertial, depth sensor support, etc.).</p>
 </div>
 <div class="paragraph">
-<p><strong>This roadmap is a projection, and may be modified. Please contact us if you have any questions.</strong></p>
+<p><strong>This roadmap is a projection, and may be subject to modifications. Please contact us if you have any questions.</strong></p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -232,6 +233,14 @@ It will include the interface definition required to build simple camera pose es
 </div>
 <div class="paragraph">
 <p>All contributions are welcome to bring about this roadmap!</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="contact_mail"><a class="anchor" href="#contact_mail"></a><a class="link" href="#contact_mail">Contact Mail</a></h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>For any requests, <a href="mailto:framework.solar@b-com.com">please contact us</a>.</p>
 </div>
 </div>
 </div>
