--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ window.cookieconsent.initialise({
 <p>By using SolAR, you can <strong>easily build augmented reality applications</strong> by testing different vision based localization solutions, <strong>create and share</strong> your own camera pose estimation pipeline with the community, and even <strong>develop</strong> efficient low-level processing elements to meet specific requirements.</p>
 </div>
 <div class="paragraph">
-<p>SolAR is a framework that improves interoperability for Augmented Reality applications and offers <strong>efficiency and robustness</strong> thanks to a <strong>modular software pipeline architecture</strong>.</p>
+<p>SolAR is a framework that improves interoperability for augmented reality applications and offers <strong>efficiency and robustness</strong> thanks to a <strong>modular software pipeline architecture</strong>.</p>
 </div>
 </div>
 </div>
