Update solar site

--- a/discover/who/index.html
+++ b/discover/who/index.html
@@ -217,7 +217,7 @@ window.cookieconsent.initialise({
 <h2 id="who"><a class="anchor" href="#who"></a><a class="link" href="#who">Who ?</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>The SolAR initiative was launched by the <a href="https://b-com.com/fr">b&lt;&gt;com Institute of Research and Technology</a>, and is open to any contributors or users who share the SolAR philosophy.</p>
+<p>The SolAR initiative was launched by the <a href="https://b-com.com/fr">Technology Research Institute b&lt;&gt;com</a>, and is open to any contributors or users who share the SolAR goals.</p>
 </div>
 <div class="imageblock">
 <div class="content">
