--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ window.cookieconsent.initialise({
 <h2 id="solar_is_always_improving"><a class="anchor" href="#solar_is_always_improving"></a><a class="link" href="#solar_is_always_improving">SolAR is always improving</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>SolAR is an open-source project. Join the community, contribute to the SolAR framework and participate in the augmented reality adoption.</p>
+<p>SolAR is an open-source project. Join the community, contribute to the SolAR framework and create a new breed of augmented reality.</p>
 </div>
 </div>
 </div>
