Update solar site

--- a/discover/legal_notice/index.html
+++ b/discover/legal_notice/index.html
@@ -216,7 +216,7 @@ window.cookieconsent.initialise({
 <h2 id="legal_notice"><a class="anchor" href="#legal_notice"></a><a class="link" href="#legal_notice">Legal notice</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Since the SolAR project is managed and hosted by the <a href="https://b-com.com/fr">Technology Research Institute b&lt;&gt;com</a>, it falls under their <a href="https://b-com.com/en/legal-notice">legal notice.</a></p>
+<p>Since the SolAR project is managed and hosted by the <a href="https://b-com.com/en">b&lt;&gt;com</a> Institute of Research and Technology, it falls under their <a href="https://b-com.com/en/legal-notice">legal notice.</a></p>
 </div>
 </div>
 </div>
