--- a/discover/programmer_guide/index.html
+++ b/discover/programmer_guide/index.html
@@ -547,7 +547,7 @@ window.cookieconsent.initialise({
 </li>
 <li>
 <p><em>Who initiated the SolAR project?</em></p>
-<p>The <a href="https://b-com.com/fr">Technology Research Institute b&lt;&gt;com</a> initiated the SolAR project after collecting the feedback of AR actors, AR end-users (industry, real-estate, medical, etc.), AR developers (essentially SMEs) and computer vision experts (academic researchers and research engineers from companies).</p>
+<p>The <a href="https://b-com.com/en">b&lt;&gt;com</a> Institute of Research and Technology initiated the SolAR project after collecting the feedback of AR actors, AR end-users (industry, real-estate, medical, etc.), AR developers (essentially SMEs) and computer vision experts (academic researchers and research engineers from companies).</p>
 </li>
 <li>
 <p><em>Who can contribute to the SolAR project?</em></p>
