Update solar site

--- a/discover/for_whom/index.html
+++ b/discover/for_whom/index.html
@@ -225,7 +225,7 @@ window.cookieconsent.initialise({
 <p>For <strong>pose estimation developers</strong>, allowing them to create a pose estimation pipeline with the best computer vision components available.</p>
 </li>
 <li>
-<p>For <strong>AR service developpers</strong>, allowing them to benefit from the best pose estimation pipelines for their AR applications.</p>
+<p>For <strong>AR service developers</strong>, allowing them to benefit from the best pose estimation pipelines for their AR applications.</p>
 </li>
 </ul>
 </div>
