--- a/discover/programmer_guide/index.html
+++ b/discover/programmer_guide/index.html
@@ -236,7 +236,7 @@ window.cookieconsent.initialise({
 <div class="ulist">
 <ul>
 <li>
-<p><strong>SolAR Data Structures</strong> define the information that flows in the pipelines and is exchanged between components.</p>
+<p><strong>SolAR Data Structures</strong> define the information that flow in the pipelines and are exchanged between components.</p>
 </li>
 <li>
 <p><strong>SolAR Components Interfaces</strong> define a standardized interface for the different categories of basic processing elements required to implement camera pose estimation (i.e.: key point extractor, descriptor computation, etc.). This unified interface is required to ensure interoperability between components allowing to easily swap one with another to improve the final camera pose estimation pipeline.</p>
@@ -401,7 +401,7 @@ window.cookieconsent.initialise({
 <div class="sect3">
 <h4 id="image_2"><a class="anchor" href="#image_2"></a><a class="link" href="#image_2">Image</a></h4>
 <div class="paragraph">
-<p>The <em>ISolARCamera</em> interface is dedicated to acquiring images from external devise. It allows grabbing the current image and sets/extracts some parameters related to the projection and acquisition models as follows:</p>
+<p>The <em>ISolARCamera</em> interface is dedicated to acquiring images from external device. It allows grabbing the current image and sets/extracts some parameters related to the projection and acquisition models as follows:</p>
 </div>
 <div class="ulist">
 <ul>
