--- a/tags.html
+++ b/tags.html
@@ -134,7 +134,7 @@ window.cookieconsent.initialise({
                 </div>
             </div>
             <div class="col-lg-9">
-                <div class="collapse navbar-collapse tabs" id="navbar-collapse">
+                <div class="navbar-collapse tabs" id="navbar-collapse">
                     <ul class="nav navbar-nav navbar-left">
 
                         
