--- a/discover/for_whom/index.html
+++ b/discover/for_whom/index.html
@@ -151,7 +151,7 @@ window.cookieconsent.initialise({
                         
 
                        <li>
-                        <form action="https://solarframework.github.io//search.html" method="get" class="navbar-form" role="search">
+                       <!-- <form action="https://solarframework.github.io//search.html" method="get" class="navbar-form" role="search">
                             <div class="input-group">
                                 <input type="text" id="search" class="form-control" placeholder="Search"
                                        name="q" class="span1" type="text" size="15">
@@ -161,6 +161,7 @@ window.cookieconsent.initialise({
                                     </button>
                                 </div>
                             </div>
+                            -->
                           </form>
                         </li>
 						
