Update solar site

--- a/discover.html
+++ b/discover.html
@@ -221,7 +221,7 @@ window.cookieconsent.initialise({
 </div>
 <div class="videoblock">
 <div class="content">
-<video src="discover/videos/solArtutorial.mp4" width="860" controls>
+<video src="discover/videos/solArtutorial.mp4" width="100%" controls>
 Your browser does not support the video tag.
 </video>
 </div>
