--- a/discover/how/index.html
+++ b/discover/how/index.html
@@ -243,7 +243,7 @@ window.cookieconsent.initialise({
 </div>
 <div class="videoblock">
 <div class="content">
-<video src="../videos/solARConcept.mp4" width="860" controls>
+<video src="../videos/solARConcept.mp4" width="100%" controls>
 Your browser does not support the video tag.
 </video>
 </div>
